--- a/package.json
+++ b/package.json
@@ -6,10 +6,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "author": "Phill arron",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.3.2",
     "prompt": "^1.0.0"
+  },
+  "devDependencies": {
+    "husky": "^1.0.0-rc.14",
+    "lint-staged": "^7.2.2",
+    "prettier": "1.14.2"
   }
 }
