--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "author": "Phill arron",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.3.2",
+    "colors": "^1.4.0",
     "prompt": "^1.0.0"
   },
   "devDependencies": {
-    "husky": "^1.0.0-rc.14",
-    "lint-staged": "^7.2.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^7.3.0",
     "prettier": "1.14.2"
   }
 }
